# comfyui-scene-composer

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  workflow.json
.github/workflows/: publish.yml
config/: actions.toml
config.default/nodes/: negative.json  output.json  positive.json
config.default/nodes/actions/: expression.json  fluids.json  intercourse.json  preliminaries.json  sexual_attributes.json  sfw.json  teasing.json
config.default/nodes/character/: attitude.json  body.json  character.json  clothes.json  eyes.json  hair.json  persona.json
config.default/nodes/clothes/: accessories.json  casual.json  clothes.json  dress.json  swimsuit.json  underwear.json  uniform.json
config.default/nodes/composition/: camera.json  dynamic.json  environment.json  protagonists.json  style.json
config.default/rules/: environment.json  intercourse.json  male.json  personas.json  sexual.json
config.default/variables/: color.json  fluids.json  utils.json
py/components/: blackboard.py
py/nodes/: apply_rules.py  cleanup_prompt.py  composer.py  merge_strings.py
py/nodes/node_factory/: __init__.py  _inputs.py  _tags.py  _variables.py
py/utils/: config.py
web/: hide_input.js
