[project]
name = "comfyui-scene-composer"
description = "A collection of nodes to facilitate the creation of explicit NSFW scenes in ComfyUI."
version = "0.1.3"
license = { file = "LICENSE" }
dependencies = ["dpath==2.2.0", "numpy==2.1.3", "toml==0.10.2"]

[project.urls]
Repository = "https://github.com/taches-ai/comfyui-scene-composer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "taches"
DisplayName = "🎞️ Scene Composer"
Icon = ""
